--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ header{
 
 #menu{
     background-color: rgba(21, 46, 32, 0.411);
-    height: 40px;
-    padding: 20px 40px 0px 40px;
+    /*height: 40px;*/
+    padding: 15px 50px 15px 50px;
     border: rgb(160, 149, 149) solid 1px;
     border-radius: 15px;
     -webkit-border-radius: 15px;
