--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ header{
 
 #menu{
     background-color: rgba(21, 46, 32, 0.411);
-    /*height: 40px;*/
+    min-height: 15px;
+    overflow: scroll;
     padding: 15px 50px 15px 50px;
     border: rgb(160, 149, 149) solid 1px;
     border-radius: 15px;
