--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header{
 
 #menu{
     background-color: rgba(21, 46, 32, 0.411);
-    min-height: 15px;
+    height: 100%;
     overflow-wrap: anywhere;
     overflow-x: scroll;
     overflow-y: hidden;
