--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ header{
 #menu{
     background-color: rgba(21, 46, 32, 0.411);
     height: 100%;
-    overflow-x: scroll;
+    white-space: nowrap;
+    overflow-x: auto;
     overflow-y: hidden;
     padding: 15px 50px 15px 50px;
     border: rgb(160, 149, 149) solid 1px;
@@ -69,6 +70,7 @@ header{
 
 footer{
     clear: both;
+    bottom: 0;
     font-size: 16px;
     height: 30px;
     padding: 20px;
