--- a/style.css
+++ b/style.css
@@ -32,11 +32,15 @@ header{
 
 #menu{
     background-color: rgba(21, 46, 32, 0.411);
-    height: 100%;
-    white-space: nowrap;
+    min-height: 20px;
     overflow-x: auto;
     overflow-y: hidden;
-    padding: 15px 50px 15px 50px;
+    -webkit-overflow-scrolling: touch;
+    -moz-overflow-scrolling: touch;
+    -o-overflow-scrolling: touch;
+    -ms-overflow-scrolling: touch;
+    white-space: nowrap;
+    padding: 10px 50px 10px 50px;
     border: rgb(160, 149, 149) solid 1px;
     border-radius: 15px;
     -webkit-border-radius: 15px;
@@ -45,10 +49,30 @@ header{
     -o-border-radius: 15px;
     box-shadow: #333 3px 4px 5px;
 }
+#menu::-webkit-scrollbar{
+    /*display: none;*/
+    width: 15px;
+}
+#menu::-webkit-scrollbar-track{
+    border-radius: 10px;
+}
+#menu::-webkit-scrollbar-thumb {
+    background-color: rgba(52, 61, 63, 0.712);
+    border-radius: 10px;
+    border: 3px solid transparent;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+#menu::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 #menu a{
     text-decoration: none;
     color:rgb(255, 223, 204);
     padding: 25px;
+    display: inline-block;
 }
 #menu a:hover{
     color: rgb(255, 190, 152);
