--- a/style.css
+++ b/style.css
@@ -7,14 +7,13 @@ html{
     height: 100%;
 }
 
-body{ 
-    /*background-color: rgb(27, 51, 45);*/
-    background-image: -moz-linear-gradient(#129656, #09523b, #000000);
-    background-image: -webkit-linear-gradient(#129656, #09523b, #000000);
-    background-image: -ms-linear-gradient(#129656, #09523b, #000000);
-    background-image: -o-linear-gradient(#129656, #09523b, #000000);
-    background-repeat: no-repeat;
+body{
+    background-image: -moz-linear-gradient(#129656, #148360, #1a7256, #093326, #000000);
+    background-image: -webkit-linear-gradient(#129656, #148360, #1a7256, #093326, #000000);
+    background-image: -o-linear-gradient(#129656, #148360, #1a7256, #093326, #000000);
+    background-repeat: repeat-x;
     background-attachment: fixed;
+    background-size: auto;
     color:rgb(255, 223, 204);
     height: 100%;
     margin: 0;
@@ -23,15 +22,18 @@ body{
 }
 
 header{
-    font-size: 32px;
+    font-size: 40px;
+    font-family: 'Syne Mono', monospace;
     height: 60px;
     padding: 60px;
     text-align: center;
     text-shadow: 1px 1px 1px #111111;
 }
 
+/* Menu de navegação */
 #menu{
     background-color: rgba(21, 46, 32, 0.411);
+    text-align: center;
     min-height: 20px;
     overflow-x: auto;
     overflow-y: hidden;
@@ -49,8 +51,8 @@ header{
     -o-border-radius: 15px;
     box-shadow: #333 3px 4px 5px;
 }
+
 #menu::-webkit-scrollbar{
-    /*display: none;*/
     width: 15px;
 }
 #menu::-webkit-scrollbar-track{
@@ -68,6 +70,7 @@ header{
 #menu::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
 #menu a{
     text-decoration: none;
     color:rgb(255, 223, 204);
@@ -77,7 +80,9 @@ header{
 #menu a:hover{
     color: rgb(255, 190, 152);
 }
+/* --- */
 
+/* Atual página com conteudo*/
 #conteudo{
     background-color: rgba(33, 51, 41, 0.247);
     min-height: 500px;
@@ -91,6 +96,7 @@ header{
     -o-border-radius: 15px;
     box-shadow: rgb(26, 25, 25) 3px 1px 5px;
 }
+/* --- */
 
 footer{
     clear: both;
