--- a/style.css
+++ b/style.css
@@ -124,6 +124,13 @@ main{
     padding: 40px;
     margin-top: 15px;
 }
+
+/* Conteudo: 404*/
+#notfound{
+    text-align: center;
+    padding: 40px;
+    margin-top: 15px;
+}
 /* --- */
 
 footer{
