--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ header{
     font-family: 'Syne Mono', monospace;
     height: 60px;
     padding: 60px;
+    margin: auto;
     text-align: center;
     text-shadow: 1px 1px 1px #111111;
 }
